# pash

./: .gitignore  CMakeLists.txt  LICENSE  MOTIVATION.md  Makefile  README.md  amalgamate.py  ast.c  ast.h  ast_internal.h  defs.peg  main.c  parser.peg  pash.c  pash.h  pash.l  pash.y  pash_internal.h  printer-json.c  printer-pretty.c  printer.c  printer.h
tests/: and-or.in  and-or.yml  assignments.in  assignments.yml  basic.in  basic.yml  compound.in  compound.yml  expansion.in  expansion.yml  for.in  for.yml  functions.in  functions.yml  if.in  if.yml  objects.in  objects.yml  pipeline.in  pipeline.yml  run.sh  semi-list.in  semi-list.yml  strings.in  strings.yml  test.pack  variables.in  variables.yml  while.in  while.yml
